--- a/RTT_Client_OGRE/ogre.cfg
+++ b/RTT_Client_OGRE/ogre.cfg
@@ -1,11 +1,11 @@
 Render System=OpenGL Rendering Subsystem
 
 [OpenGL Rendering Subsystem]
-Display Frequency=50 MHz
+Display Frequency=60 Hz
 FSAA=8
 Fixed Pipeline Enabled=Yes
 Full Screen=No
 RTT Preferred Mode=FBO
-VSync=Yes
+VSync=No
 Video Mode=1280 x  800
 sRGB Gamma Conversion=No
