--- a/RTT_Client_OGRE/src/resources.cfg
+++ b/RTT_Client_OGRE/src/resources.cfg
@@ -1,40 +1,6 @@
 # Resources required by the sample browser and most samples.
 [Essential]
-Zip=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/packs/SdkTrays.zip
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/thumbnails
-
-# Common sample resources needed by many of the samples.
-# Rarely used resources should be separately loaded by the
-# samples which require them.
-[Popular]
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/fonts
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/materials/programs
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/materials/scripts
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/materials/textures
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/materials/textures/nvidia
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/models
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/particle
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/DeferredShadingMedia
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/PCZAppMedia
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/RTShaderLib
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/RTShaderLib/materials
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/materials/scripts/SSAO
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/materials/textures/SSAO
-Zip=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/packs/cubemap.zip
-Zip=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/packs/cubemapsJS.zip
-Zip=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/packs/dragon.zip
-Zip=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/packs/fresneldemo.zip
-Zip=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/packs/ogretestmap.zip
-Zip=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/packs/ogredance.zip
-Zip=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/packs/Sinbad.zip
-Zip=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/packs/skybox.zip
-
-[General]
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media
-
-# Materials for visual tests
-[Tests]
-FileSystem=/home/mark/RTT/ogre_src_v1-8-0/Samples/Media/../../Tests/Media
+Zip=./assets/UI/SdkTrays.zip
 
 [RTT]
 FileSystem=./assets/models
