Client_Ogre: Add RTT_Client_OGRE to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,5 @@ RTT_Client_Terminal/Debug/RTT_Client_Terminal
 RTT_Server/Debug/RTT_Server
 RTT_Client_GTK/Debug/RTT_Client_GTK
 RTT_Ogre_3D/Debug/RTT_Ogre_3D
+RTT_Client_OGRE/Debug/RTT_Client_OGRE
 RemoteSystemsTempFiles
