Client_OGRE: Fixed Makefile for new Ogre Client

--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,5 @@ RTT_Server/Debug/RTT_Server
 RTT_Client_GTK/Debug/RTT_Client_GTK
 RTT_Ogre_3D/Debug/RTT_Ogre_3D
 RTT_Client_OGRE/Debug/RTT_Client_OGRE
+RTT_Client_OGRE/resources_install.cfg
 RemoteSystemsTempFiles
