--- a/RTT_Client_OGRE/resources.cfg
+++ b/RTT_Client_OGRE/resources.cfg
@@ -1,6 +1,6 @@
 # Resources required by the sample browser and most samples.
 [Essential]
-Zip=./assets/UI/SdkTrays.zip
+FileSystem=./assets/UI/SdkTrays
 
 [RTT]
 FileSystem=./assets/models
