--- a/.gitignore
+++ b/.gitignore
@@ -40,13 +40,19 @@ Thumbs.db
 # RTT Specific Files #
 ######################
 .metadata
+RTT_Server/Debug/RTT_Server
+RTT_Server/Release/RTT_Server
+RTT_Server/RTT_Server
 RTT_Client_Core/.settings/
 RTT_Client_Core/Debug/RTT_Client_Core
-RTT_Client_Terminal/Debug/RTT_Client_Terminal
-RTT_Server/Debug/RTT_Server
+RTT_Client_Core/Release/RTT_Client_Core
+RTT_Client_Core/RTT_Client_Core
 RTT_Client_GTK/Debug/RTT_Client_GTK
-RTT_Ogre_3D/Debug/RTT_Ogre_3D
+RTT_Client_GTK/Release/RTT_Client_GTK
+RTT_Client_GTK/RTT_Client_GTK
 RTT_Client_OGRE/Debug/RTT_Client_OGRE
+RTT_Client_OGRE/Release/RTT_Client_OGRE
+RTT_Client_OGRE/RTT_Client_OGRE
 RTT_Client_OGRE/resources.cfg
 RTT_Client_OGRE/plugins.cfg
 RTT_Client_OGRE/ogre.cfg
