--- a/RTT_Client_GTK/.project
+++ b/RTT_Client_GTK/.project
@@ -31,7 +31,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/RTT_Client_GTK/Debug}</value>
+					<value>${workspace_loc:/RTT_Client_GTK/Release}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
