--- a/RTT_Client_OGRE/.cproject
+++ b/RTT_Client_OGRE/.cproject
@@ -24,37 +24,48 @@
 								<option id="gnu.cpp.compiler.exe.debug.option.optimization.level.1061226652" name="Optimization Level" superClass="gnu.cpp.compiler.exe.debug.option.optimization.level" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.exe.debug.option.debugging.level.1355256170" name="Debug Level" superClass="gnu.cpp.compiler.exe.debug.option.debugging.level" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.include.paths.1678270398" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/usr/local/include/CEGUI"/>
+									<listOptionValue builtIn="false" value="/usr/local/include/CEGUI/RendererModules/Ogre"/>
+									<listOptionValue builtIn="false" value="/usr/local/include/OGRE"/>
 									<listOptionValue builtIn="false" value="/usr/local/lib"/>
 									<listOptionValue builtIn="false" value="../../RTT_Client_Core/src"/>
 									<listOptionValue builtIn="false" value="../../RTT_Common/src"/>
 									<listOptionValue builtIn="false" value="/usr/local/include/OGRE/Terrain"/>
-									<listOptionValue builtIn="false" value="/usr/local/include/CEGUI"/>
 									<listOptionValue builtIn="false" value="/usr/include/OIS"/>
 									<listOptionValue builtIn="false" value="/usr/local/lib/OGRE"/>
-									<listOptionValue builtIn="false" value="/usr/local/include/OGRE"/>
-									<listOptionValue builtIn="false" value="/usr/local/include"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.other.pic.1946278016" name="Position Independent Code (-fPIC)" superClass="gnu.cpp.compiler.option.other.pic" value="true" valueType="boolean"/>
-								<option id="gnu.cpp.compiler.option.other.other.1975536884" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -std=c++0x" valueType="string"/>
+								<option id="gnu.cpp.compiler.option.other.other.1975536884" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -std=c++0x -pthread" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.757860493" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.985645519" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.exe.debug.option.optimization.level.1740694786" name="Optimization Level" superClass="gnu.c.compiler.exe.debug.option.optimization.level" valueType="enumerated"/>
 								<option id="gnu.c.compiler.exe.debug.option.debugging.level.745814347" name="Debug Level" superClass="gnu.c.compiler.exe.debug.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
+								<option id="gnu.c.compiler.option.include.paths.2000397552" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/usr/local/include/CEGUI"/>
+									<listOptionValue builtIn="false" value="/usr/local/include/OGRE"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.826070422" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.934409466" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.604889567" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug">
 								<option id="gnu.cpp.link.option.other.2123962229" name="Other options (-Xlinker [option])" superClass="gnu.cpp.link.option.other"/>
 								<option id="gnu.cpp.link.option.libs.1066367889" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
-									<listOptionValue builtIn="false" value="OgreMain"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="CEGUIBase"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="CEGUIOgreRenderer"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="OgreMain"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="pthread"/>
 									<listOptionValue builtIn="false" value="CEGUIBase"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="CEGUIOgreRenderer"/>
+									<listOptionValue builtIn="false" value="OgreMain"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="pthread"/>
 									<listOptionValue builtIn="false" value="RTT_Client_Core"/>
 									<listOptionValue builtIn="false" value="OIS"/>
 									<listOptionValue builtIn="false" value="crypto"/>
 								</option>
 								<option id="gnu.cpp.link.option.shared.531223114" name="Shared (-shared)" superClass="gnu.cpp.link.option.shared" value="false" valueType="boolean"/>
 								<option id="gnu.cpp.link.option.paths.2094733441" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
+									<listOptionValue builtIn="false" value="/usr/local/lib"/>
 									<listOptionValue builtIn="false" value="../../RTT_Client_Core/Debug/"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1081074414" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
@@ -68,18 +79,28 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 						<entry excluding="src" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="PauseState.h|PauseState.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings">
 				<externalSettings containerId="org.eclipse.cdt.managedbuilder.pkgconfig.extSettings" factoryId="org.eclipse.cdt.core.extension.container.factory">
-					<externalSetting contentTypes="org.eclipse.cdt.core.cSource:org.eclipse.cdt.core.cxxSource"/>
-					<externalSetting contentTypes="org.eclipse.cdt.managedbuilder.core.compiledObjectFile"/>
+					<externalSetting contentTypes="org.eclipse.cdt.core.cSource:org.eclipse.cdt.core.cxxSource">
+						<entry flags="BUILTIN" kind="includePath" name="/usr/local/include"/>
+						<entry flags="BUILTIN" kind="includePath" name="/usr/local/include/CEGUI"/>
+						<entry flags="BUILTIN" kind="includePath" name="/usr/local/include/OGRE"/>
+					</externalSetting>
+					<externalSetting contentTypes="org.eclipse.cdt.managedbuilder.core.compiledObjectFile">
+						<entry flags="RESOLVED" kind="libraryPath" name="/usr/local/lib"/>
+						<entry flags="UNDEFINED" kind="libraryFile" name="CEGUIBase" srcPrefixMapping="" srcRootPath=""/>
+						<entry flags="UNDEFINED" kind="libraryFile" name="CEGUIOgreRenderer" srcPrefixMapping="" srcRootPath=""/>
+						<entry flags="UNDEFINED" kind="libraryFile" name="OgreMain" srcPrefixMapping="" srcRootPath=""/>
+						<entry flags="UNDEFINED" kind="libraryFile" name="pthread" srcPrefixMapping="" srcRootPath=""/>
+					</externalSetting>
 				</externalSettings>
 			</storageModule>
-			<storageModule moduleId="packages"/>
+			<storageModule CEGUI="true" CEGUI-OGRE="true" CEGUI-OPENGL="false" OGRE="false" OGRE-PCZ="false" OGRE-Paging="false" OGRE-Property="false" OGRE-RTShaderSystem="false" OGRE-Terrain="false" OIS="false" SDL_rwops_zzip="false" adobe-source-libraries="false" alsa="false" atk="false" atkmm-1.6="false" atspi-2="false" audacious="false" audclient="false" bash-completion="false" bigreqsproto="false" cairo="false" cairo-fc="false" cairo-ft="false" cairo-gobject="false" cairo-pdf="false" cairo-png="false" cairo-ps="false" cairo-svg="false" cairo-tee="false" cairo-xlib="false" cairo-xlib-xrender="false" cairomm-1.0="false" cairomm-ft-1.0="false" cairomm-pdf-1.0="false" cairomm-png-1.0="false" cairomm-ps-1.0="false" cairomm-svg-1.0="false" cairomm-xlib-1.0="false" cairomm-xlib-xrender-1.0="false" cally-1.0="false" camel-1.2="false" check="false" clutter-1.0="false" clutter-cogl-1.0="false" clutter-gdk-1.0="false" clutter-glx-1.0="false" clutter-gst-1.0="false" clutter-gtk-0.12="false" clutter-gtk-1.0="false" clutter-gtkmm-1.0="false" clutter-x11-1.0="false" cluttermm-1.0="false" cogl-1.0="false" cogl-2.0-experimental="false" cogl-gl-1.0="false" cogl-pango-1.0="false" cogl-pango-2.0-experimental="false" com_err="false" compositeproto="false" cppunit="false" cryptopp="false" damageproto="false" dbus-1="false" dbus-glib-1="false" dmxproto="false" dri="false" dri2proto="false" evieproto="false" evolution-data-server-1.2="false" fixesproto="false" fontconfig="false" fontsproto="false" fontutil="false" freetype2="false" gail="false" gail-3.0="false" gconf-2.0="false" gdk="false" gdk-2.0="false" gdk-3.0="false" gdk-pixbuf-2.0="false" gdk-pixbuf-xlib-2.0="false" gdk-x11-2.0="false" gdk-x11-3.0="false" gdkmm-3.0="false" gdmgreeter="false" gdmsimplegreeter="false" gio-2.0="false" gio-unix-2.0="false" giomm-2.4="false" gl="false" glib="false" glib-2.0="false" glibmm-2.4="false" glproto="false" glu="false" gmime-2.6="false" gmodule="false" gmodule-2.0="false" gmodule-export-2.0="false" gmodule-no-export-2.0="false" gnome-desktop-3.0="false" gnome-doc-utils="false" gnome-icon-theme="false" gnome-keybindings="false" gnome-keyring-1="false" gnome-python-desktop-2.0="false" gnome-video-effects="false" gnutls="false" gnutls-extra="false" goa-1.0="false" goa-backend-1.0="false" gobject-2.0="false" gobject-introspection-1.0="false" gobject-introspection-no-export-1.0="false" gsettings-desktop-schemas="false" gstreamer-0.10="false" gstreamer-app-0.10="false" gstreamer-audio-0.10="false" gstreamer-base-0.10="false" gstreamer-cdda-0.10="false" gstreamer-check-0.10="false" gstreamer-controller-0.10="false" gstreamer-dataprotocol-0.10="false" gstreamer-fft-0.10="false" gstreamer-floatcast-0.10="false" gstreamer-interfaces-0.10="false" gstreamer-net-0.10="false" gstreamer-netbuffer-0.10="false" gstreamer-pbutils-0.10="false" gstreamer-plugins-base-0.10="false" gstreamer-riff-0.10="false" gstreamer-rtp-0.10="false" gstreamer-rtsp-0.10="false" gstreamer-sdp-0.10="false" gstreamer-tag-0.10="false" gstreamer-video-0.10="false" gthread="false" gthread-2.0="false" gtk-doc="false" gtkmm-3.0="false" gtkplus="false" gtkplus-2.0="false" gtkplus-3.0="false" gtkplus-unix-print-2.0="false" gtkplus-unix-print-3.0="false" gtkplus-x11-2.0="false" gtkplus-x11-3.0="false" gweather-3.0="false" ice="false" inputproto="false" javascriptcoregtk-3.0="false" json-glib-1.0="false" kbproto="false" libavcodec="false" libavdevice="false" libavfilter="false" libavformat="false" libavutil="false" libcanberra="false" libcanberra-gtk="false" libcanberra-gtk3="false" libcrypto="false" libcurl="false" libdrm="false" libdrm_intel="false" libdrm_nouveau="false" libdrm_radeon="false" libebackend-1.2="false" libebook-1.2="false" libecal-1.2="false" libedata-book-1.2="false" libedata-cal-1.2="false" libedataserver-1.2="false" libedataserverui-3.0="false" libexslt="false" libffi="false" libgda-4.0="false" libgda-bdb-4.0="false" libgda-report-4.0="false" libgda-xslt-4.0="false" libgdata="false" libical="false" libkmod="false" libkms="false" libnotify="false" libpcre="false" libpcrecpp="false" libpcreposix="false" libpng="false" libpng15="false" libpostproc="false" libquvi="false" libquvi-scripts="false" libselinux="false" libsepol="false" libsoup-2.4="false" libsoup-gnome-2.4="false" libsparsehash="false" libssh="false" libssh2="false" libssh_threads="false" libssl="false" libstartup-notification-1.0="false" libswresample="false" libswscale="false" libtasn1="false" libxml-2.0="false" libxslt="false" moduleId="packages" notify-python="false" nspr="false" nss="false" nss-softokn="false" nss-util="false" oauth="false" openssl="false" p11-kit-1="false" pango="false" pangocairo="false" pangoft2="false" pangomm-1.4="false" pangox="false" pangoxft="false" pixman-1="false" ply-boot-client="false" ply-splash-core="false" ply-splash-graphics="false" pthread-stubs="false" randrproto="false" recordproto="false" renderproto="false" resourceproto="false" rhythmbox="false" scrnsaverproto="false" sdl="false" shared-mime-info="false" sigcplusplus-2.0="false" sm="false" sqlite3="false" systemd="false" totem-plparser="false" totem-plparser-mini="false" udev="false" usbutils="false" videoproto="false" webkitgtk-3.0="false" x11="false" x11-xcb="false" xau="false" xaw7="false" xcb="false" xcb-composite="false" xcb-damage="false" xcb-dpms="false" xcb-dri2="false" xcb-glx="false" xcb-randr="false" xcb-record="false" xcb-render="false" xcb-res="false" xcb-screensaver="false" xcb-shape="false" xcb-shm="false" xcb-sync="false" xcb-xevie="false" xcb-xf86dri="false" xcb-xfixes="false" xcb-xinerama="false" xcb-xprint="false" xcb-xselinux="false" xcb-xtest="false" xcb-xv="false" xcb-xvmc="false" xcmiscproto="false" xcomposite="false" xcursor="false" xdamage="false" xext="false" xextproto="false" xf86bigfontproto="false" xf86dgaproto="false" xf86driproto="false" xf86miscproto="false" xf86vidmodeproto="false" xfixes="false" xft="false" xi="false" xinerama="false" xineramaproto="false" xml2po="false" xmms="false" xmms2-client="false" xmms2-client-cpp="false" xmms2-client-cpp-glib="false" xmms2-client-ecore="false" xmms2-client-glib="false" xmms2-plugin="false" xmu="false" xmuu="false" xpm="false" xproto="false" xproxymngproto="false" xrandr="false" xrender="false" xt="false" xxf86vm="false" zlib="false" zzip-zlib-config="false" zzipfseeko="false" zziplib="false" zzipmmapped="false" zzipwrap="false"/>
 		</cconfiguration>
 		<cconfiguration id="cdt.managedbuild.config.gnu.exe.release.1452910203">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.gnu.exe.release.1452910203" moduleId="org.eclipse.cdt.core.settings" name="Release">
@@ -177,4 +198,5 @@
 		<resource resourceType="PROJECT" workspacePath="/RTT_Client_OGRE"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
+	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 </cproject>
