--- a/RTT_Client_OGRE/Debug/makefile
+++ b/RTT_Client_OGRE/Debug/makefile
@@ -44,7 +44,7 @@ all: RTT_Client_OGRE
 RTT_Client_OGRE: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++  -o "RTT_Client_OGRE" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -L/usr/local/lib -L../../RTT_Client_Core/Debug/ -o "RTT_Client_OGRE" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
