--- a/RTT_Client_OGRE/Debug/resources.cfg
+++ b/RTT_Client_OGRE/Debug/resources.cfg
@@ -1,8 +1,8 @@
 # Resources required by the sample browser and most samples.
 [Essential]
-FileSystem=./assets/UI/SdkTrays
+FileSystem=../assets/UI/CEGUI
 
 [RTT]
-FileSystem=./assets/models
-FileSystem=./assets/materials
-FileSystem=./assets/materials/textures
+FileSystem=../assets/models
+FileSystem=../assets/materials
+FileSystem=../assets/materials/textures
