--- a/RTT_Client_OGRE/resources.cfg
+++ b/RTT_Client_OGRE/resources.cfg
@@ -1,6 +1,6 @@
 # Resources required by the sample browser and most samples.
 [Essential]
-FileSystem=./assets/UI/SdkTrays
+FileSystem=./assets/UI/CEGUI
 
 [RTT]
 FileSystem=./assets/models
