OGRE: Fixed Overlay Segfault DebugOverlay is active, but not yet reporting FPS as it should. Added in start for Client_GTK port, with JoinCustomServerState

--- a/RTT_Client_OGRE/Debug/resources.cfg
+++ b/RTT_Client_OGRE/Debug/resources.cfg
@@ -1,6 +1,7 @@
 # Resources required by the sample browser and most samples.
 [Essential]
 FileSystem=../assets/UI/CEGUI
+FileSystem=../assets/UI/OgreCore
 
 [RTT]
 FileSystem=../assets/models
